--- a/multi/test/dune
+++ b/multi/test/dune
@@ -1,4 +1,4 @@
 (library (name bidirectional_multimap_test)
- (libraries base expect_test_helpers_core.expect_test_helpers_base
-  bidirectional_multimap)
+ (libraries base core bidirectional_multimap bidirectional_multimap_stable
+  expect_test_helpers_core.expect_test_helpers_base expect_test_helpers_core)
  (preprocess (pps ppx_jane)))
