--- a/bidirectional_map.opam
+++ b/bidirectional_map.opam
@@ -1,4 +1,5 @@
 opam-version: "2.0"
+version: "v0.16.0"
 maintainer: "Jane Street developers"
 authors: ["Jane Street Group, LLC"]
 homepage: "https://github.com/janestreet/bidirectional_map"
@@ -11,7 +12,7 @@ build: [
 ]
 depends: [
   "ocaml" {>= "4.14.0"}
-  "dune" {>= "2.0.0"}
+  "dune"  {>= "2.0.0"}
 ]
 available: arch != "arm32" & arch != "x86_32"
 synopsis: "A library for bidirectional maps and multimaps."
