--- a/test/dune
+++ b/test/dune
@@ -1,4 +1,6 @@
-(library (name bidirectional_map_test)
+(library
+ (name bidirectional_map_test)
  (libraries base core bidirectional_map bidirectional_map_stable
-  expect_test_helpers_core.expect_test_helpers_base expect_test_helpers_core)
- (preprocess (pps ppx_jane)))
+   expect_test_helpers_core.expect_test_helpers_base expect_test_helpers_core)
+ (preprocess
+  (pps ppx_jane)))
