--- a/multi/src/dune
+++ b/multi/src/dune
@@ -1,3 +1,5 @@
-(library (name bidirectional_multimap)
+(library
+ (name bidirectional_multimap)
  (libraries base base_quickcheck bidirectional_map_interfaces)
- (preprocess (pps ppx_base)))
+ (preprocess
+  (pps ppx_base)))
