--- a/multi/stable/dune
+++ b/multi/stable/dune
@@ -1,3 +1,5 @@
-(library (name bidirectional_multimap_stable)
+(library
+ (name bidirectional_multimap_stable)
  (libraries bidirectional_map_interfaces_stable bidirectional_multimap core)
- (preprocess (pps ppx_jane.kernel)))
+ (preprocess
+  (pps ppx_jane.kernel)))
