--- a/src/dune
+++ b/src/dune
@@ -1,3 +1,5 @@
-(library (name bidirectional_map)
+(library
+ (name bidirectional_map)
  (libraries base base_quickcheck bidirectional_map_interfaces)
- (preprocess (pps ppx_base)))
+ (preprocess
+  (pps ppx_base)))
