--- a/multi/stable/dune
+++ b/multi/stable/dune
@@ -1,5 +1,7 @@
 (library
  (name bidirectional_multimap_stable)
- (libraries bidirectional_map_interfaces_stable bidirectional_multimap core)
+ (libraries bidirectional_map_interfaces bidirectional_map_interfaces_stable
+   bidirectional_multimap bin_prot.shape core
+   ppx_stable_witness.stable_witness)
  (preprocess
   (pps ppx_jane.kernel)))
