--- a/test/dune
+++ b/test/dune
@@ -1,6 +1,6 @@
 (library
  (name bidirectional_map_test)
- (libraries base core bidirectional_map bidirectional_map_stable
+ (libraries base bidirectional_map bidirectional_map_stable core
    expect_test_helpers_core.expect_test_helpers_base expect_test_helpers_core
    ppx_stable_witness.stable_witness)
  (preprocess
